polymer databinding sucks with arrays

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,14 +27,19 @@
         "./libs/appFactory.ts",
         "./libs/config.ts",
         "./libs/database.ts",
+        "./libs/objectPromise.ts",
+        "./libs/preLoadDB.ts",
         "./models/models.ts",
         "./models/user.ts",
         "./models/viewedItem.ts",
         "./models/widget.ts",
-        "./models/widgetSettings.ts",
+        "./public/ts/index/logic.ts",
+        "./public/ts/widgets/viewedItem.ts",
+        "./public/ts/widgets/widget.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/browserify/browserify.d.ts",
         "./typings/express/express.d.ts",
+        "./typings/jquery/jquery.d.ts",
         "./typings/lodash/lodash.d.ts",
         "./typings/mime/mime.d.ts",
         "./typings/node/node.d.ts",
