--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserify": "^11.0.1",
     "express": "^4.13.3",
     "jade": "^1.11.0",
+    "jquery": "^2.1.4",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.6.0"
