--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,13 @@
     "files": [
         "./app.ts",
         "./controllers/user.ts",
+        "./controllers/viewedItem.ts",
         "./libs/appFactory.ts",
         "./libs/config.ts",
         "./libs/database.ts",
         "./libs/objectPromise.ts",
         "./libs/preLoadDB.ts",
+        "./libs/rivetsConfig.ts",
         "./models/models.ts",
         "./models/user.ts",
         "./models/viewedItem.ts",
@@ -38,11 +40,13 @@
         "./public/ts/widgets/widget.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/browserify/browserify.d.ts",
+        "./typings/express-session/express-session.d.ts",
         "./typings/express/express.d.ts",
         "./typings/jquery/jquery.d.ts",
         "./typings/lodash/lodash.d.ts",
         "./typings/mime/mime.d.ts",
         "./typings/node/node.d.ts",
+        "./typings/rivets/rivets.d.ts",
         "./typings/sequelize/sequelize.d.ts",
         "./typings/serve-static/serve-static.d.ts",
         "./typings/tsd.d.ts",
