--- a/bower.json
+++ b/bower.json
@@ -13,17 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "iron-icons": "PolymerElements/iron-icons#~1.0.3",
-    "neon-animation": "PolymerElements/neon-animation#~1.0.6",
-    "paper-badge": "PolymerElements/paper-badge#~1.0.3",
-    "paper-button": "PolymerElements/paper-button#~1.0.3",
-    "paper-card": "PolymerElements/paper-card#~1.0.3",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
-    "paper-item": "PolymerElements/paper-item#~1.0.2",
-    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
-    "paper-styles": "PolymerElements/paper-styles#~1.0.11",
-    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-    "polymer": "Polymer/polymer#~1.1.2"
+    "bootstrap": "~3.3.5",
+    "rivets": "~0.8.1",
+    "font-awesome": "~4.4.0"
   }
 }
