--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
         "./libs/appFactory.ts",
         "./libs/config.ts",
         "./libs/database.ts",
+        "./libs/hn.ts",
         "./libs/objectPromise.ts",
         "./libs/preLoadDB.ts",
         "./libs/rivetsConfig.ts",
@@ -36,7 +37,6 @@
         "./models/viewedItem.ts",
         "./models/widget.ts",
         "./public/ts/index/logic.ts",
-        "./public/ts/widgets/viewedItem.ts",
         "./public/ts/widgets/widget.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/browserify/browserify.d.ts",
