--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify": "^11.0.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "gulp": "^3.9.0",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "pg": "^4.4.1",
