gulp build browserify, add config file with data

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "browserify": "^11.0.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "glob": "^5.0.15",
     "gulp": "^3.9.0",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
+    "mkdirp": "^0.5.1",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.6.0",
