--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,12 @@
         "./libs/objectPromise.ts",
         "./libs/preLoadDB.ts",
         "./libs/rivetsConfig.ts",
+        "./libs/widgets.ts",
         "./models/models.ts",
         "./models/user.ts",
         "./models/viewedItem.ts",
         "./models/widget.ts",
         "./public/ts/index/logic.ts",
-        "./public/ts/widgets/widget.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/browserify/browserify.d.ts",
         "./typings/express-session/express-session.d.ts",
