--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     ],
     "files": [
         "./app.ts",
+        "./controllers/comic.ts",
         "./controllers/user.ts",
         "./controllers/viewedItem.ts",
         "./libs/appFactory.ts",
@@ -38,14 +39,18 @@
         "./models/viewedItem.ts",
         "./models/widget.ts",
         "./public/ts/index/logic.ts",
+        "./typings/bluebird/bluebird.d.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/browserify/browserify.d.ts",
         "./typings/express-session/express-session.d.ts",
         "./typings/express/express.d.ts",
+        "./typings/form-data/form-data.d.ts",
         "./typings/jquery/jquery.d.ts",
         "./typings/lodash/lodash.d.ts",
         "./typings/mime/mime.d.ts",
         "./typings/node/node.d.ts",
+        "./typings/request-promise/request-promise.d.ts",
+        "./typings/request/request.d.ts",
         "./typings/rivets/rivets.d.ts",
         "./typings/sequelize/sequelize.d.ts",
         "./typings/serve-static/serve-static.d.ts",
