--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mkdirp": "^0.5.1",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
+    "request-promise": "^1.0.0",
     "sequelize": "^3.6.0",
     "sightglass": "^0.2.4"
   }
