--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-  "name": "niftydash",
-  "version": "0.0.0",
+  "name": "nifty-dash",
+  "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Trevor Baron",
-  "license": "",
-  "browser": {
-    "rivets": "./bower_components/rivets/dist/rivets.min.js"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TrevorDev/niftyDash.git"
   },
-  "browserify-shim": {
-    "rivets": {
-      "exports": "rivets"
-    }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TrevorDev/niftyDash/issues"
   },
+  "homepage": "https://github.com/TrevorDev/niftyDash#readme",
   "dependencies": {
-    "babel": "^5.8.23",
-    "body-parser": "^1.13.3",
-    "browserify": "^11.0.1",
-    "express": "^4.13.3",
-    "express-session": "^1.11.3",
-    "glob": "^5.0.15",
-    "gulp": "^3.9.0",
+    "@types/body-parser": "0.0.33",
+    "@types/browserify": "^12.0.30",
+    "@types/express": "^4.0.33",
+    "@types/express-session": "0.0.31",
+    "@types/jade": "0.0.29",
+    "@types/jquery": "^2.0.32",
+    "@types/request": "0.0.31",
+    "@types/request-promise": "^3.0.32",
+    "@types/rivets": "0.0.27",
+    "@types/sequelize": "^4.0.36",
+    "@types/vue": "^1.0.30",
+    "body-parser": "^1.15.2",
+    "browserify": "^13.1.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "jade": "^1.11.0",
-    "jquery": "^2.1.4",
-    "mkdirp": "^0.5.1",
-    "pg": "^4.4.1",
-    "pg-hstore": "^2.3.2",
-    "request-promise": "^1.0.0",
-    "sequelize": "^3.6.0",
-    "sightglass": "^0.2.4"
+    "jquery": "^3.1.1",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "rivets": "^0.9.4",
+    "sequelize": "^3.24.3",
+    "vue": "^1.0.27"
   }
 }
