fix boostrap dependency

--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5",
-    "rivets": "~0.8.1",
+    "bootstrap": "4.0.0-alpha.4",
     "font-awesome": "~4.4.0"
   }
 }
