--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
   ],
   "dependencies": {
     "bootstrap": "4.0.0-alpha.4",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "jquery-ui": "^1.12.1",
+    "typeahead.js": "^0.11.1",
+    "awesomplete": "^1.1.1"
   }
 }
