--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/TrevorDev/niftyDash#readme",
   "dependencies": {
+    "@types/awesomplete": "^1.1.2",
     "@types/body-parser": "0.0.33",
     "@types/browserify": "^12.0.30",
     "@types/express": "^4.0.33",
@@ -28,7 +29,11 @@
     "@types/rivets": "0.0.27",
     "@types/sequelize": "^4.0.36",
     "@types/vue": "^1.0.30",
+    "@types/vue-router": "^0.7.28",
+    "awesomplete": "^1.1.1",
+    "bloodhound-js": "^1.2.1",
     "body-parser": "^1.15.2",
+    "bootstrap-tokenfield": "^0.12.0",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
@@ -38,6 +43,15 @@
     "request-promise": "^4.1.1",
     "rivets": "^0.9.4",
     "sequelize": "^3.24.3",
-    "vue": "^1.0.27"
+    "tether": "^1.4.0",
+    "vue": "^2.1.8",
+    "vue-router": "^2.1.1"
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common",
+    "bootstrap-tokenfield": "./node_modules/bootstrap-tokenfield/dist/bootstrap-tokenfield.min.js",
+    "jquery-ui": "./bower_components/jquery-ui/jquery-ui.min.js",
+    "bootstrap": "./bower_components/bootstrap/dist/js/bootstrap.min.js",
+    "typeahead": "./bower_components/typeahead.js/dist/typeahead.bundle.min.js"
   }
 }
