--- a/package.json
+++ b/package.json
@@ -26,32 +26,24 @@
     "@types/jquery": "^2.0.32",
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
-    "@types/rivets": "0.0.27",
-    "@types/sequelize": "^4.0.36",
+    "@types/sequelize": "^4.0.39",
     "@types/vue": "^1.0.30",
-    "@types/vue-router": "^0.7.28",
     "awesomplete": "^1.1.1",
-    "bloodhound-js": "^1.2.1",
     "body-parser": "^1.15.2",
-    "bootstrap-tokenfield": "^0.12.0",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
+    "pg": "^6.1.2",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
-    "rivets": "^0.9.4",
-    "sequelize": "^3.24.3",
-    "tether": "^1.4.0",
+    "sequelize": "^3.28.0",
     "vue": "^2.1.8",
     "vue-router": "^2.1.1"
   },
   "browser": {
     "vue": "vue/dist/vue.common",
-    "bootstrap-tokenfield": "./node_modules/bootstrap-tokenfield/dist/bootstrap-tokenfield.min.js",
-    "jquery-ui": "./bower_components/jquery-ui/jquery-ui.min.js",
-    "bootstrap": "./bower_components/bootstrap/dist/js/bootstrap.min.js",
-    "typeahead": "./bower_components/typeahead.js/dist/typeahead.bundle.min.js"
+    "bootstrap": "./bower_components/bootstrap/dist/js/bootstrap.min.js"
   }
 }
