--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/sequelize": "^4.0.39",
     "@types/vue": "^1.0.30",
     "awesomplete": "^1.1.1",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
