--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true
     },
+    "externalTranspiler": "babel",
     "exclude": [
         "node_modules"
     ],
