add more block types, mokeypatch collision stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "exclude": [
         "node_modules"
     ],
+    "filesGlob": [
+      "**/*.ts"
+    ],
+    "files": [
+      "libs/niftyWorld/objects/blockCreator.ts"
+    ],
     "compileOnSave": true,
     "buildOnSave": false,
     "atom": {
