--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/browserify": "^12.0.30",
     "@types/express": "^4.0.33",
     "@types/express-session": "0.0.31",
+    "@types/html2canvas": "^0.5.33",
     "@types/jade": "0.0.29",
     "@types/jquery": "^2.0.32",
     "@types/request": "0.0.31",
@@ -37,6 +38,7 @@
     "connect-cache": "^0.2.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "html2canvas": "^0.5.0-beta4",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
     "pg": "^6.1.2",
