--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.0.33",
     "@types/express-session": "0.0.31",
     "@types/html2canvas": "^0.5.33",
+    "@types/htmlparser2": "^3.7.29",
     "@types/jade": "0.0.29",
     "@types/jquery": "^2.0.32",
     "@types/request": "0.0.31",
@@ -39,6 +40,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "html2canvas": "^0.5.0-beta4",
+    "htmlparser2": "^3.9.2",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
     "pg": "^6.1.2",
@@ -48,7 +50,8 @@
     "slideout": "^1.0.1",
     "three": "^0.84.0",
     "vue": "^2.1.8",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "youtube-player": "^4.2.2"
   },
   "browser": {
     "vue": "vue/dist/vue.common",
