--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pg": "^6.1.2",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
+    "rss-parser": "^2.5.2",
     "sequelize": "^3.28.0",
     "slideout": "^1.0.1",
     "three": "^0.84.0",
