--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/awesomplete": "^1.1.2",
     "@types/body-parser": "0.0.33",
     "@types/browserify": "^12.0.30",
+    "@types/cheerio": "^0.22.0",
     "@types/express": "^4.0.33",
     "@types/express-session": "0.0.31",
     "@types/html2canvas": "^0.5.33",
@@ -36,6 +37,7 @@
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
+    "cheerio": "^0.22.0",
     "connect-cache": "^0.2.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
