--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "htmlparser2": "^3.9.2",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
+    "nifty-cmd": "^1.0.1",
     "pg": "^6.1.2",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
