--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.4",
     "font-awesome": "~4.4.0",
-    "awesomplete": "^1.1.1"
+    "awesomplete": "^1.1.1",
+    "webrtc-adapter": "^3.3.2"
   }
 }
